--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,11 @@
   		<artifactId>mockito-all</artifactId>
   		<version>1.9.5</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-compiler-plugin</artifactId>
+  		<version>2.3.2</version>
+  		<type>maven-plugin</type>
+  	</dependency>
   </dependencies>
 </project>
