--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,39 @@
   		<version>1.9.5</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.apache.maven.plugins</groupId>
-  		<artifactId>maven-compiler-plugin</artifactId>
-  		<version>2.3.2</version>
-  		<type>maven-plugin</type>
+  		<groupId>org.codehaus.plexus</groupId>
+  		<artifactId>plexus-compiler-javac</artifactId>
+  		<version>1.8.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.eclipse.jetty</groupId>
+  		<artifactId>jetty-webapp</artifactId>
+  		<version>9.4.8.v20171121</version>
+  	</dependency>
+  	<dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-annotations</artifactId>
+        <version>9.4.8.v20171121</version>
+    </dependency>
+    <dependency>
+       <groupId>org.eclipse.jetty</groupId>
+       <artifactId>apache-jsp</artifactId>
+       <version>9.4.8.v20171121</version>
+    </dependency>
+  	<dependency>
+  		<groupId>org.eclipse.jetty</groupId>
+  		<artifactId>jetty-deploy</artifactId>
+  		<version>9.4.8.v20171121</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.eclipse.jetty</groupId>
+  		<artifactId>jetty-server</artifactId>
+  		<version>9.4.8.v20171121</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tomcat</groupId>
+  		<artifactId>tomcat-jsp-api</artifactId>
+  		<version>9.0.5</version>
   	</dependency>
   </dependencies>
 </project>
