--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,11 @@
   		<artifactId>tomcat-jsp-api</artifactId>
   		<version>9.0.5</version>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  		<version>5.1.13</version>
+  	</dependency>
   </dependencies>
+  
 </project>
