--- a/pom.xml
+++ b/pom.xml
@@ -102,15 +102,18 @@
   	</dependency>
   </dependencies>
   <build>
-    <plugins>
-      <plugin>
-         <artifactId>maven-compiler-plugin</artifactId>
-         <version>3.1</version>
-         <configuration>
-        <source>9.0.4</source>
-        <target>9.0.4</target>
-        </configuration>
-  </plugin>
-  </plugins>
-  </build> 
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.11.v20150529</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
